--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.37.0",
     "animejs": "3.2.1",
+    "framer-motion": "^12.27.1",
     "gsap": "3.12.5",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
