feat: Add comprehensive SEO meta tags, favicon, and OG images, and implement video thumbnail management within the admin panel.

--- a/portfolio/.htaccess
+++ b/portfolio/.htaccess
@@ -31,7 +31,21 @@ Options -Indexes
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# 5. Handle trailing slashes and basic canonicalization
+# 5. Browser Caching
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresDefault "access plus 1 month"
+    ExpiresByType text/css "access plus 1 week"
+    ExpiresByType application/javascript "access plus 1 week"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
+    ExpiresByType video/mp4 "access plus 1 month"
+</IfModule>
+
+# 6. Handle trailing slashes and basic canonicalization
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !(.*)/$
